got TrustStore.load/store working